bug(fellow-profile): fix fellow profile alignment
- update fellow profile dashboard

--- a/src/components/DevPulseChart/DevPulseChart.css
+++ b/src/components/DevPulseChart/DevPulseChart.css
@@ -1,6 +1,6 @@
 .pulse-chart {
   background-color: transparent;
-  padding: 0 60px 50px 0;
+  padding: 0 0 50px 0;
   position: relative;
 }
 
