--- a/src/components/FellowChart/Chart/Chart.css
+++ b/src/components/FellowChart/Chart/Chart.css
@@ -2,7 +2,7 @@
   font-weight: 500;
   background-color: #ffffff;
   border-radius: 6px;
-  overflow: auto;
+  overflow-y: hidden;
 }
 .line-chart-card__header {
   height: 61px;
