--- a/src/components/LMSProgressSummary/LMSChart/LMSChart.css
+++ b/src/components/LMSProgressSummary/LMSChart/LMSChart.css
@@ -1,5 +1,5 @@
 .lms-chart {
-  padding: 0 65px 50px 0;
+  padding: 0 0 50px 0;
 }
 
 .lms-chart__timeline {
