--- a/src/components/ProgressBar/ProgressBar.css
+++ b/src/components/ProgressBar/ProgressBar.css
@@ -23,8 +23,9 @@
 }
 .progress-wrapper {
   margin: 0 60px 70px 0;
-  max-width: 2000px;
+  width: 100%;
 }
+
 .progress-wrapper p {
   height: 26px;
   color: #0459e4;
